[package]
name = "montecarlo"
version = "0.1.0"
edition = "2024"
description = "Monte carlo simulation of photons propagation in skin"
license = "MIT OR Apache-2.0"
authors = ["François Desloges"]
repository = "https://github.com/fdlgs/montecarlo"
readme = "README.md"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
ndarray = { version = "0.17.2", features = ["rayon"] }
rand = { version = "0.10.0", features = ["thread_rng"] }
rayon = "1.11.0"
ruviz = { version = "=0.3.4", features = ["ndarray_support", "parallel", "simd"] }
strum = { version = "0.28.0", features = ["derive"] }
tracing = "0.1.44"
# uom = "0.38.0"

[lints.clippy]
pedantic    = { level = "deny", priority = -1 }
nursery     = { level = "deny", priority = -1 }
unwrap_used = "deny"
missing_errors_doc = "allow"

[profile.release]
opt-level = 3        # Maximize speed (default for release)
lto = "fat"          # Full Link Time Optimization
codegen-units = 1    # Single unit for better optimization
panic = "abort"      # Remove unwinding code
strip = true         # Automatically strip symbols from the binary
